Username (with localStorage).

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <h2 id="clock">00:00:00</h2>
-    <script src="src/main.js"></script>
+    <div id="name-content" class="hidden">
+        <form id="login">
+            <h2>What's your name?</h2>
+            <input type="text" required id="name-input" name="name">
+        </form>
+    </div>
+    <div id="main-content">
+        <h2 id="clock">00:00:00</h2>
+        <h3>Hello, Name</h3>
+        <script src="src/main.js" type="module"></script>
+        <script src="src/timer.js" type="module"></script>
+    </div>
 </body>
 </html>
