Random Background Image.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
+    <img alt="background">
     <div id="name-content" class="hidden">
         <form id="login">
             <h2>What's your name?</h2>
@@ -17,6 +18,7 @@
         <h3>Hello, Name</h3>
         <script src="src/main.js" type="module"></script>
         <script src="src/timer.js" type="module"></script>
+        <script src="src/background.js" type="module"></script>
     </div>
 </body>
 </html>
