Weather with Geolocation.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     </form>
                 </div>
             </div>
+            <div id="weather"></div>
         </div>
     </main>
     <script src="src/main.js" type="module"></script>
