todo content close 구현

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <button id="todo-button">TODO</button>
                 <div id="todo-content" class="hidden">
                     TODO
+                    <button class="close">X</button>
                     <ul></ul>
                     <form id="todo-form">
                         <input type="text" id="todo-input" name="todo-input" required>
