--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
             <div id="todo">
                 <button id="todo-button">TODO</button>
                 <div id="todo-content" class="hidden">
-                    TODO
-                    <button class="close">X</button>
+                    <div class="header">
+                        TODO
+                        <button class="close">X</button>
+                    </div>
                     <ul></ul>
                     <form id="todo-form">
-                        <input type="text" id="todo-input" name="todo-input" required>
+                        <input type="text" id="todo-input" name="todo-input" required placeholder="Write a To Do here">
                     </form>
                 </div>
             </div>
@@ -33,5 +35,6 @@
         </div>
     </main>
     <script src="src/main.js" type="module"></script>
+    <script src="https://kit.fontawesome.com/b4969d1b50.js" crossorigin="anonymous"></script>
 </body>
 </html>
