style css2 & icon 적용

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div id="todo-content" class="hidden">
                     <div class="header">
                         TODO
-                        <button class="close">X</button>
+                        <i class="fas fa-times close"></i>
                     </div>
                     <ul></ul>
                     <form id="todo-form">
